--- a/ICDAR/src/experiments/regex.ipynb
+++ b/ICDAR/src/experiments/regex.ipynb
@@ -427,9 +427,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Result: \n",
+    "Result obtained by ICDAR automatic evaluation:\n",
     "\n",
     "Calculated!{\"recall\": 0.25936599423631124, \"precision\": 0.25936599423631124, \"hmean\": 0.25936599423631124}%   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score: 0.25936599423631124\n"
+     ]
+    }
+   ],
+   "source": [
+    "recall = 0.25936599423631124\n",
+    "precision = 0.25936599423631124\n",
+    "\n",
+    "f1_score = 2 * (precision * recall / (precision + recall))\n",
+    "print(f'F1 score: {f1_score}')"
    ]
   }
  ],
